--- a/BasicExercise/BasicExercise.csproj
+++ b/BasicExercise/BasicExercise.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CheckPosition.cs" />
+    <Compile Include="NumberSum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
