--- a/BasicExercise/BasicExercise.csproj
+++ b/BasicExercise/BasicExercise.csproj
@@ -47,6 +47,7 @@
     <Compile Include="NumberSum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="stringIndex.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
